# MPyTools

./: PYPI.md  README.md  loop_win.py  pyproject.toml  rich_test.py  term_fix.py  wintest.py
mcol/: __init__.py  colours.py
mgo/: __init__.py  io.py  primitives.py
mlog/: __init__.py  logs.py  test_log.py
module/: __init__.py  module.py
mout/: __init__.py  convert.py  deco.py  fileio.py  output.py  print.py  progress.py  testing.py
mplot/: __init__.py  fit.py  graph2D.py  hist1D.py  hist2D.py  main.py  surf3D.py
mrich/: __init__.py  colors.py  console.py  df.py  functions.py  patch.py  spinners.py  tools.py  wrappers.py
mwin/: __init__.py  curses.py  window.py
